--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" type="image/x-icon" href="https://judes.me/lrc_editor/favicon.ico"><title>lrc_editor</title><script defer="defer" src="bundle.851b6347d1ed0d92840e.js"></script></head><body><div id="app"></div></body></html>
